--- a/styles.css
+++ b/styles.css
@@ -147,23 +147,21 @@ button {
   cursor: pointer;
 }
 
-#histories {
+/* #histories {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-}
+} */
 
-.card {
-  width: 100%;
-  height: 100%;
-  padding: 50px;
-  display: flex;
-  justify-content: space-between;
+.col {
+  /* width: 90%; */
+  min-height: 220px;
+  /* padding: 50px; */
   align-items: center;
   padding: 20px 30px;
   color: white;
   border-radius: 15px;
-  background: rgb(255, 255, 255);
+  background: black;
   background: linear-gradient(92.49deg,
       rgba(255, 255, 255, 0.1) 0.18%,
       rgba(255, 255, 255, 0.05) 99.85%);
@@ -189,7 +187,7 @@ button {
     width: 100%;
   }
 
-  .card {
+  /* .card {
     flex-direction: column;
-  }
+  } */
 }
