--- a/styles.css
+++ b/styles.css
@@ -147,11 +147,11 @@ button {
   cursor: pointer;
 }
 
-/* #histories {
+#histories {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-} */
+  /* flex-wrap: wrap; */
+  justify-content: space-between;
+}
 
 .col {
   /* width: 90%; */
