--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,15 @@ body {
   font-family: "Zilla Slab", serif;
 }
 
+.nav-link {
+  color: #1f1e2e !important;
+  border-bottom: 1px solid transprant;
+}
+
+.nav-link:hover {
+  border-bottom: 3px solid rgb(55, 1, 17);
+}
+
 .box-container {
   width: 70%;
   margin: 0 auto;
